[workspace]
resolver = "2"
members = [
    "aoc-core",
    "aoc-01",
    "aoc-02",
    "aoc-03",
    "aoc-04",
    "aoc-05",
    "aoc-06",
    "aoc-07",
    "aoc-08",
    "aoc-09",
    "aoc-10",
    "aoc-11",
    "aoc-12",
    "aoc-13",
    "aoc-14",
    "aoc-15",
    "aoc-16",
    "aoc-17",
    "aoc-18",
    "aoc-19",
    "aoc-20",
    "aoc-21",
    "aoc-22",
    "aoc-23",
    "aoc-24",
    "aoc-25",
]

